fix font-example row spacing

--- a/src/common.blocks/font-example/font-example.scss
+++ b/src/common.blocks/font-example/font-example.scss
@@ -4,5 +4,5 @@
 .font-example {
     display: grid;
     grid-template-columns: max-content auto;
-    grid-row-gap: 25px;
+    grid-row-gap: 50px;
 }
